[gd_scene load_steps=19 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/base_out_atlas.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 506, 96, 44, 37 )

[sub_resource type="ParticlesMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
next_pass = SubResource( 2 )
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 479.017, 65.3481, 102.303, 94.4459 )
margin_left = 7.1288
margin_right = 6.62088
margin_top = 4.29031
margin_bottom = 4.25212

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.992157, 0.847059, 0.537255, 0.501961 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 0.847059, 0.537255, 0.290196 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 598, 90, 50, 45 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 2 )

[node name="lobby" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_left = -1840.0
margin_top = -1085.0
margin_right = 2462.0
margin_bottom = 1628.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.0
margin_top = -287.0
margin_right = 401.0
margin_bottom = 292.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="userNameLb" type="Label" parent="CanvasLayer/InfoPanel"]
margin_left = 266.365
margin_top = 23.0609
margin_right = 360.365
margin_bottom = 44.0609
text = "User Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userName" type="LineEdit" parent="CanvasLayer/InfoPanel"]
margin_left = 363.0
margin_top = 11.2649
margin_right = 538.0
margin_bottom = 50.2649
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sentry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/InfoPanel"]
margin_left = 38.0
margin_top = 87.0
margin_right = 295.0
margin_bottom = 316.0
custom_styles/bg = SubResource( 7 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playersList" type="Label" parent="CanvasLayer/InfoPanel"]
margin_left = 40.1393
margin_top = 61.1072
margin_right = 119.139
margin_bottom = 83.1072
text = "Player List"

[node name="join" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 595.47
margin_top = 7.1192
margin_right = 708.47
margin_bottom = 46.1192
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverStart" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 34.3009
margin_top = 14.5244
margin_right = 250.301
margin_bottom = 50.5244
custom_styles/normal = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sever"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMap" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
margin_left = 379.0
margin_top = 134.0
margin_right = 532.0
margin_bottom = 241.0
custom_fonts/normal_font = SubResource( 11 )
text = "Arrow : Move

A: Throw

B: Bomb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newAccount" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 596.0
margin_top = 78.0
margin_right = 739.0
margin_bottom = 117.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "NewAccount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccount" type="CanvasLayer" parent="."]

[node name="AccountPanel" type="Panel" parent="CreateAccount"]
margin_left = 25.0
margin_top = 20.0
margin_right = 775.0
margin_bottom = 596.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameEdit" type="LineEdit" parent="CreateAccount/AccountPanel"]
margin_left = 231.016
margin_top = 84.0218
margin_right = 457.016
margin_bottom = 121.022
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="Label" parent="CreateAccount/AccountPanel"]
margin_left = 99.8595
margin_top = 153.418
margin_right = 228.859
margin_bottom = 188.418
custom_fonts/font = SubResource( 13 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="CreateAccount/AccountPanel"]
margin_left = 98.8595
margin_top = 86.4178
margin_right = 227.859
margin_bottom = 121.418
custom_fonts/font = SubResource( 14 )
text = "User Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordEdit" type="LineEdit" parent="CreateAccount/AccountPanel"]
margin_left = 231.016
margin_top = 152.022
margin_right = 457.016
margin_bottom = 189.022
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="CreateAccount/AccountPanel"]
margin_left = 496.463
margin_top = 143.151
margin_right = 647.463
margin_bottom = 193.151
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAccountBt" type="Button" parent="CreateAccount/AccountPanel"]
margin_left = 506.609
margin_top = 222.854
margin_right = 642.609
margin_bottom = 271.854
text = "Show Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccountList" type="RichTextLabel" parent="CreateAccount/AccountPanel"]
margin_left = 35.0
margin_top = 239.0
margin_right = 481.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackInfoPanel" type="Button" parent="CreateAccount/AccountPanel"]
margin_left = 518.609
margin_top = 295.477
margin_right = 634.609
margin_bottom = 330.477
custom_fonts/font = SubResource( 15 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/InfoPanel/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoPanel/serverStart" to="." method="_on_serverStart_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoPanel/newAccount" to="." method="_on_newAccount_pressed"]
[connection signal="pressed" from="CreateAccount/AccountPanel/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CreateAccount/AccountPanel/ShowAccountBt" to="." method="_on_ShowAccountBt_pressed"]
[connection signal="pressed" from="CreateAccount/AccountPanel/BackInfoPanel" to="." method="_on_BackInfoPanel_pressed"]
